# pyppet

./: .gitignore  README  README.md  pixi.toml  pyproject.toml
examples/: attach_franka.py  move_franka.py  multiple_frankas.py
examples/ros2/pyppet_example/: CMakeLists.txt  package.xml
examples/ros2/pyppet_example/urdf/: example_mesh.stl  example_model.py
marionette/: format.py  models.py  pyproject.toml
marionette/examples/: attach_franka.py  move_franka.py  multiple_frankas.py
marionette/marionette/: format.py
marionette/marionette/models/franka_research_3/: franka_research_3.py
marionette/models/franka_research_3/: franka_research_3.py
pyppet/: format.py  rerun.py  urdf.py
pyppet/examples/: example_mesh.stl  example_model.py
src/: pyproject.toml
src/examples/: attach_franka.py  move_franka.py  mujoco_franka.py  multiple_frankas.py
src/marionette/: format.py  robots.py
src/marionette/models/franka_research_3/: franka_research_3.xml  model.py
src/marionette/models/franka_research_3/assets/: finger.stl  link4.stl  link5.stl
src/marionette/models/franka_research_3/assets/collision/: hand.stl  link0.stl  link1.stl  link2.stl  link3.stl  link6.stl  link7.stl
src/marionette/models/franka_research_3/assets/visual/: link7.glb
tests/: test_format.py  test_rerun.py  test_rotation.py  test_urdf.py
