[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyppet"
description = "pyppet is a robot model format that uses Python instead of XML for better type checking, logic, scripting, and parsing"
requires-python = ">=3.10, <3.13"
version = "1.0.1"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/david-dorf/pyppet"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.tasks]
example_model = "python -m examples.ros2.pyppet_example.urdf.example_model"
