[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marionette"
version = "0.1.0"
dependencies = [
    "rerun-sdk>=0.22.1, <0.23.0",
    "trimesh>=4.6.1,<5",
    "pycollada>=0.8,<0.9",
    "scipy>=1.15.1,<2",
    "genesis-world>=0.2.1, <0.3.0",
]

[project.license]
text = "Apache-2.0"
